--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "barryvdh/laravel-ide-helper": "v2.4.3",
         "cviebrock/eloquent-sluggable": "4.5",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~4.0",
