--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.1.3",
         "barryvdh/laravel-ide-helper": "^2.4",
         "cviebrock/eloquent-sluggable": "4.5",
+        "maatwebsite/excel": "~2.1.0",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.6.*",
