--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,13 @@
         "php": ">=7.1.3",
         "barryvdh/laravel-ide-helper": "^2.4",
         "cviebrock/eloquent-sluggable": "4.5",
-        "maatwebsite/excel": "~2.1.0",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4.0"
+        "laravelcollective/html": "^5.4.0",
+        "maatwebsite/excel": "~2.1.0",
+        "spatie/laravel-backup": "^5.5"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
